Change border radius of container div to stop it poking out from behind img

--- a/Styles.css
+++ b/Styles.css
@@ -84,7 +84,7 @@ a {
   margin-top: 24px;
   position: relative;
   background: #00fff8;
-  border-radius: 8px;
+  border-radius: 10px;
   
 }
 
